--- a/views/index.pug
+++ b/views/index.pug
@@ -2,3 +2,10 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  div(class='grid')
+    div(class='argh1')
+      p div 1
+    div(class='argh2')
+      p div 2
+    div(class='argh3')
+      p div 3
