--- a/views/user.pug
+++ b/views/user.pug
@@ -1,31 +1,32 @@
 extends layout
 block content
     h1= user
-    div
-        p Timesheet
-        table(border='1')
-            tr
-                th Name
-                th Mon
-                th Tue
-                th Wed
-                th Thu
-                th Fri
-                th Sat
-                th Sun
-            each hours,name in projects
+    div(class='grid')
+        div(class='jira')
+            p User selection
+            form(action = `/${user}/updateusers`, method="POST")
+                table
+                    each userelem in users
+                        tr
+                            td
+                                input(type='checkbox' name=userelem.id checked=userelem.assigned)
+                            td #{userelem.name}
+                br
+                button(type = "submit") Update Jira Users
+        div(class='timesheet')
+            p Timesheet
+            table(class='tstable')
                 tr
-                    td= name
-                    each hour in hours
-                        td(align='right')= hour.toFixed(2)
-    div
-        p User selection
-        form(action = `/${user}/updateusers`, method="POST")
-            table
-                each userelem in users
+                    th Name
+                    th(class='tdhour') Mon
+                    th(class='tdhour') Tue
+                    th(class='tdhour') Wed
+                    th(class='tdhour') Thu
+                    th(class='tdhour') Fri
+                    th(class='tdhour') Sat
+                    th(class='tdhour') Sun
+                each hours,name in projects
                     tr
-                        td
-                            input(type='checkbox' name=userelem.id checked=userelem.assigned)
-                        td #{userelem.name}
-            br
-            button(type = "submit") Update Jira Users
+                        td= name
+                        each hour in hours
+                            td(class='tdhour')= hour.toFixed(2)
