Added in the date= query parameter

--- a/views/user.pug
+++ b/views/user.pug
@@ -14,7 +14,7 @@ block content
                 br
                 button(type = "submit") Update Jira Users
         div(class='timesheet')
-            p Timesheet
+            p Timesheet for dates between #{dates.start} and #{dates.end}
             table(class='tstable')
                 tr
                     th Name
